--- a/final_lab.ipynb
+++ b/final_lab.ipynb
@@ -569,6 +569,16 @@
    "source": [
     "### Write a section in your technical report that reports the out-of-sample performance of the models. Discuss the model’s usefulness for predicting future shares\n",
     "\n",
+    "The out of sample performance of the models came out to be the following:\n",
+    "\n",
+    "Decision Tree:\n",
+    "- R^2 Test: ~0.1200 — The gist of this statistic is that the model explains only ~12% of the variance in the test data\n",
+    "- MSE Test: ~0.7552 — The models mse on the test set. This was higher than the random forest mse, meaning that this model has a lower prediction accuracy.\n",
+    "\n",
+    "Random Forest:\n",
+    "- R^2 Test: ~0.1427 — The gist of this statistic is that the model explains a measly ~14% of the variance in the test data.\n",
+    "- MSE Test: ~0.7358 — The mse on the test set, which is lower than the Decision Trees mse, meaning that it had a better prediction accuracy.\n",
+    "\n",
     "The Random Forest does seem to do better than the Decision Tree, but because both of the models R^2 values seem to be pretty low, we really cant use them for prediction of the usefulness of future shares. I would highly recommend adding more predictive variables, since that would allow the model to further hone its ability to predict future shares. I would say that this model gives less of an accurate prediction, and instead gives a vague idea on what might happen in the future. For stakeholders, I would probably not use this as the only decision on whether or not you purchase shares, but it also cannot just be brushed off since everything here was done with math and calculations. Stakholders should consider their own domain of knowlege and consider the limitations put in place by this model.\n"
    ]
   }
