--- a/final_lab.ipynb
+++ b/final_lab.ipynb
@@ -581,6 +581,29 @@
     "\n",
     "The Random Forest does seem to do better than the Decision Tree, but because both of the models R^2 values seem to be pretty low, we really cant use them for prediction of the usefulness of future shares. I would highly recommend adding more predictive variables, since that would allow the model to further hone its ability to predict future shares. I would say that this model gives less of an accurate prediction, and instead gives a vague idea on what might happen in the future. For stakeholders, I would probably not use this as the only decision on whether or not you purchase shares, but it also cannot just be brushed off since everything here was done with math and calculations. Stakholders should consider their own domain of knowlege and consider the limitations put in place by this model.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Concluding Section: Final Predictive Model and Business Implications\n",
+    "#### Model Comparison on the Test Set\n",
+    "To assess the predictive accuracy of the three models, we evaluated their performance on the test set using the metrics of Mean Squared Error and R-squared. Here are those results.\n",
+    "\n",
+    "- Linear Regression R^2 Score - 0.1359 and MSE - 0.7656\n",
+    "- Decision Tree R^2 Score - 0.0962 and MSE - 0.7863\n",
+    "- LASSO Regression R^2 Score - 0.1275 and MSE - 0.7488\n",
+    "#### Selection of the Final Predictive Model\n",
+    "The **LASSO Regression model** ends up as the best-performing model on the test set, achieving the lowest MSE **(0.7488)** and a competitive R^2 score **(0.1275)**. These results indicate that LASSO offers a slight edge over the other models in predictive accuracy while effectively reducing overfitting. Additionally, LASSO selected 52 significant predictors, enhancing the model by focusing on the most impactful features.\n",
+    "#### Mashable’s Business Concerns\n",
+    "Mashable aims to better understand the drivers of article popularity and use these insights to optimize content strategy.\n",
+    "\n",
+    "- Key predictors of popularity include the average keyword weight, weekend publication timing, specific content themes identified through topic modeling, and the balance of subjective tone in articles. Based on these findings, we recommend optimizing keyword relevance, scheduling articles strategically for weekends, fixing content themes to align with popular topics, and maintaining a balance between objective reporting and subjective storytelling.\n",
+    "#### Our Confidence\n",
+    "While the best-performing model explains around 12.75% of the variance in the log-transformed number of shares, the low R^2 values across all models highlight the complexity and difference of online content popularity. Factors beyond the dataset, such as viral trends, platform algorithms, and audience behavior, likely play significant roles.\n",
+    "\n",
+    "Either way, the LASSO model provides a reliable information for identifying actionable predictors and guiding content optimization efforts. Mashable can use these insights to help their editorial strategy, monitor the effectiveness of the changes, and over time to improve results further.\n"
+   ]
   }
  ],
  "metadata": {
